// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Error logged if no title given 1`] = `
<Touchable
  onPress={[Function]}
>
  <Component
    style={
      Array [
        Object {
          "alignSelf": "flex-start",
          "margin": 5,
          "padding": 5,
        },
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#ffffff",
        }
      }
    />
  </Component>
</Touchable>
`;

exports[`Render SubjectBadge renders without crashing 1`] = `
<Touchable
  onPress={[Function]}
>
  <Component
    style={
      Array [
        Object {
          "alignSelf": "flex-start",
          "margin": 5,
          "padding": 5,
        },
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#ffffff",
        }
      }
    >
      Test
    </Text>
  </Component>
</Touchable>
`;
